@@ -245,4 +245,17 @@ verilog/inc1.v:402:   arg_line2" "FOO \
 verilog/inc1.v:402:   BAR "
 verilog/inc1.v:403: `line 403 "verilog/inc1.v" 0
 verilog/inc1.v:403: Line_Preproc_Check 403
-verilog/inc1.v:406: `line 406 "verilog/inc1.v" 2
+verilog/inc1.v:412: abc
+verilog/inc1.v:420: EXP: sonet_frame
+verilog/inc1.v:421: sonet_frame
+verilog/inc1.v:425: EXP: sonet_frame
+verilog/inc1.v:426: sonet_frame
+verilog/inc1.v:430: EXP: sonet_frame
+verilog/inc1.v:431: sonet_frame
+verilog/inc1.v:436: EXP: module zzz ; endmodule
+verilog/inc1.v:437: module zzz ; endmodule
+verilog/inc1.v:438: module zzz ; endmodule
+verilog/inc1.v:441: EXP: module a_b ; endmodule
+verilog/inc1.v:442: module a_b ; endmodule
+verilog/inc1.v:443: module a_b ; endmodule
+verilog/inc1.v:447: `line 447 "verilog/inc1.v" 2
